[package]
name = "tcp_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
failure = "0.1.8"
hello = "1.0.4"
http = "0.2.8"
httparse = "1.8.0"
# reqwest = "0.11.12"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.64"
threadpool = "1.8.1"
tokio = "1.21.1"
