[package]
name = "tcp_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
failure = "0.1.8"
http = "0.2.8"
httparse = "1.8.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.64"
